Delete form and insert CV

--- a/index.html
+++ b/index.html
@@ -198,44 +198,66 @@
             <span class="heading-sec__main heading-sec__main--lt">Contact</span>
             <a href = "mailto: brunacrespomello@gmail.com" class="heading-sec__sub heading-sec__sub--lt">brunacrespomello@gmail.com</a>
         </h2>
-        <div class="contact__form-container">
-            <form action="https://formsubmit.co/brunacrespomello@gmail.com" method="POST" class="contact__form">
-
-                <div class="contact__form-field">
-                    <label class="contact__form-label" for="name">Name</label>
-                    <input required
-                           placeholder="Enter your name"
-                           type="text"
-                           class="contact__form-input"
-                           name="name"
-                           id="name">
+        <div class="row">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div>
+                        <img src="/img/linkedin-dark.svg" class="contact__icon"/>
+                        <br></br>
+                        <a class="heading-sec__sub heading-sec__sub--lt" href="https://www.linkedin.com/in/brunacrespomello/">LinkedIn</a>
+                    </div>
+                    <div>
+                        <img src="/img/curriculum-vitae-svgrepo-com.svg" class="contact__icon"/>
+                        <br></br>
+                        <a class="heading-sec__sub heading-sec__sub--lt" href="docs/Bruna%20Mello%20CS.docx">CV</a>
+                    </div>
+                    <div>
+                        <img src="/img/github-dark.svg" class="contact__icon"/>
+                        <br></br>
+                        <a class="heading-sec__sub heading-sec__sub--lt" href="https://github.com/BrunaMello">GitHub</a><br></br>
+                    </div>
                 </div>
-
-                <div class="contact__form-field">
-                    <label class="contact__form-label" for="email">Email</label>
-                    <input required
-                           placeholder="Enter your email"
-                           type="email"
-                           class="contact__form-input"
-                           name="email"
-                           id="email">
-                </div>
-
-                <div class="contact__form-field">
-                    <label class="contact__form-label" for="message">Message</label>
-                    <textarea required
-                              cols="10"
-                              rows="5"
-                              placeholder="Enter your message"
-                              class="contact__form-input"
-                              name="message"
-                              id="message">
-                    </textarea>
-                </div>
-                <button type="submit" class="btn btn--theme contact__btn">Submit</button>
-            </form>
+            </div>
         </div>
 
+        </div>
+<!--        <div class="contact__form-container">-->
+<!--            <form action="https://formsubmit.co/brunacrespomello@gmail.com" method="POST" class="contact__form">-->
+
+<!--                <div class="contact__form-field">-->
+<!--                    <label class="contact__form-label" for="name">Name</label>-->
+<!--                    <input required-->
+<!--                           placeholder="Enter your name"-->
+<!--                           type="text"-->
+<!--                           class="contact__form-input"-->
+<!--                           name="name"-->
+<!--                           id="name">-->
+<!--                </div>-->
+
+<!--                <div class="contact__form-field">-->
+<!--                    <label class="contact__form-label" for="email">Email</label>-->
+<!--                    <input required-->
+<!--                           placeholder="Enter your email"-->
+<!--                           type="email"-->
+<!--                           class="contact__form-input"-->
+<!--                           name="email"-->
+<!--                           id="email">-->
+<!--                </div>-->
+
+<!--                <div class="contact__form-field">-->
+<!--                    <label class="contact__form-label" for="message">Message</label>-->
+<!--                    <textarea required-->
+<!--                              cols="10"-->
+<!--                              rows="5"-->
+<!--                              placeholder="Enter your message"-->
+<!--                              class="contact__form-input"-->
+<!--                              name="message"-->
+<!--                              id="message">-->
+<!--                    </textarea>-->
+<!--                </div>-->
+<!--                <button type="submit" class="btn btn&#45;&#45;theme contact__btn">Submit</button>-->
+<!--            </form>-->
+<!--        </div>-->
     </div>
 </section>
 
